# bansuri

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  scripts.schema.json  setup.py
.github/workflows/: docs.yml  pytest.yml
bansuri/: __init__.py  master.py  scripts  task_runner.py
bansuri/alerts/: cmd_notifier.py  command_safety.py  notifier.py
bansuri/base/: __init__.py  config_manager.py  task_base.py
bansuri/base/config/: __init__.py  fail_config.py  log_config.py  proc_id_config.py  resource_config.py  schedule_config.py  task_config.py
bansuri/base/misc/: __init__.py  header.py  help.py
bansuri/server/: dashboard.py  index.html
doc/: BUILD.md  JSON_ENHANCEMENTS.md  NOT_IMPLEMENTED.md  README.md  README.md.bak  THEME.md  THEME_QUICK_REF.txt  THEME_UPGRADE.md  advanced-config.rst  architecture.rst  concepts.rst  conf.py  configuration.rst  contributing.rst  deployment.rst  index.rst  notifications.rst  quickstart.rst  reference.rst  requirements.txt  submit.sh  task_runner_flow.puml  troubleshooting-detailed.rst  troubleshooting.rst
doc/_build/doctrees/: advanced-config.doctree  api.doctree  architecture.doctree  concepts.doctree  configuration.doctree  contributing.doctree  custom-tasks.doctree  deployment.doctree  environment.pickle  index.doctree  installation.doctree  notifications.doctree  quickstart.doctree  reference.doctree  troubleshooting-detailed.doctree  troubleshooting.doctree  usage.doctree
doc/_build/html/: .buildinfo  .buildinfo.bak  advanced-config.html  api.html  architecture.html  concepts.html  configuration.html  contributing.html  custom-tasks.html  deployment.html  genindex.html  index.html  installation.html  (+10 more)
doc/_static/: custom.css
doc/_templates/: layout.html
tests/: conftest.py  test_config.py  test_notifier.py  test_orchestrator.py  test_task_runner.py
tests/alerts/: test_cmd_notifier.py  test_command_safety.py
tests/master/: test_orchestrator.py
tests/task_runner/: test_task_runner_basics.py  test_task_runner_command.py  test_task_runner_loops.py  test_task_runner_notifications.py
(+25 files in other folders)
